# PaydayCoin-Core

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  libpaydaycoinconsensus.pc.in
.travis/: lint_04_install.sh  lint_05_before_script.sh  lint_06_script.sh  test_03_before_install.sh  test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build_msvc/: README.md  libsecp256k1_config.h  msvc-autogen.py  paydaycoin.sln  paydaycoin_config.h
contrib/: README.md  gitian-build.py  install_db4.sh  paydaycoin-cli.bash-completion  paydaycoin-qt.pro  paydaycoin-tx.bash-completion  paydaycoind.bash-completion  valgrind.supp
depends/: README.md  config.guess  config.sub  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  paydaycoin-conf.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-14054.md  release-notes-15566.md  release-notes-15637.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  paydaycoin-cli.1  paydaycoin-qt.1  paydaycoin-tx.1  paydaycoin-wallet.1  paydaycoind.1
share/: genbuild.sh  setup.nsi.in
(+1101 files in other folders)
