dist_man1_MANS=

if BUILD_PAYDAYCOIND
  dist_man1_MANS+=paydaycoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=paydaycoin-qt.1
endif

if BUILD_PAYDAYCOIN_CLI
  dist_man1_MANS+=paydaycoin-cli.1
endif

if BUILD_PAYDAYCOIN_TX
  dist_man1_MANS+=paydaycoin-tx.1
endif

if ENABLE_WALLET
if BUILD_PAYDAYCOIN_WALLET
  dist_man1_MANS+=paydaycoin-wallet.1
endif
endif
